fix z-index

--- a/resources/sass/components/select-list.scss
+++ b/resources/sass/components/select-list.scss
@@ -58,7 +58,7 @@
 
   .dropdown-list {
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     color: black;
     background: lightgrey;
     width: 50vh;
